<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/radio_group"/>

    <RadioGroup
        android:id="@id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/home_rb"
            style="@style/radio_button"
            android:drawableTop="@drawable/home_icon_selector"
            android:text="@string/home" />

        <RadioButton
            android:id="@+id/mall_rb"
            style="@style/radio_button"
            android:drawableTop="@drawable/mall_icon_selector"
            android:text="@string/mall" />

        <RadioButton
            android:id="@+id/neighbor_rb"
            style="@style/radio_button"
            android:drawableTop="@drawable/neighbor_icon_selector"
            android:text="@string/neighbor" />

        <RadioButton
            android:id="@+id/my_rb"
            style="@style/radio_button"
            android:drawableTop="@drawable/my_icon_selector"
            android:text="@string/my" />
    </RadioGroup>


</RelativeLayout>