<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <ImageView
        android:id="@+id/pic_iv"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_error" />
    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/pic_iv"
        android:layout_marginStart="25dp"
        android:text=""
        android:textColor="@color/title_text"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/post_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/name_tv"
        android:layout_below="@id/name_tv"
        android:layout_marginTop="10dp"
        android:text=""
        android:textColor="@color/title_text"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/satisfaction_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text=""
        android:textColor="@color/title_text"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/satisfaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@id/post_tv"
        android:text="满意度"
        android:textColor="@color/title_text"
        android:textSize="14sp"/>
    <Button
        android:id="@+id/is_agree_btn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignLeft="@id/name_tv"
        android:layout_below="@id/post_tv"
        android:background="@android:color/transparent"
        android:visibility="gone"/>
    <RadioGroup
        android:id="@id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignStart="@id/post_tv"
        android:layout_below="@id/post_tv"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/good_rb"
            style="@style/satisfaction_radio_button"
            android:drawableTop="@drawable/good_selector_service"
            android:text="@string/good"/>
        <RadioButton
            android:id="@+id/soso_rb"
            style="@style/satisfaction_radio_button"
            android:drawableTop="@drawable/soso_selector"
            android:text="@string/soso"/>
        <RadioButton
            android:id="@+id/neighbor_rb"
            style="@style/satisfaction_radio_button"
            android:drawableTop="@drawable/bad_selector"
            android:text="@string/bad"/>

    </RadioGroup>
</RelativeLayout>