<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/action_bar_rl"
        style="@style/top_rl"
        >

        <ImageView
            android:id="@+id/back_iv"
            style="@style/top_back"
            />

        <TextView
            android:id="@+id/top_title"
            style="@style/top_title"
            android:text="关于我们"
            />

    </RelativeLayout>

    <View
        style="@style/split_line"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:background="@color/white"
                >

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/about_us_logo"
                    />

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_logo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="i丽岛3.0"
                    android:textColor="@color/title_text"
                    />

                <TextView
                    android:id="@+id/tv_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_version"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="尽享科技生活"
                    android:textColor="@color/title_text"
                    />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="168dp"
                android:padding="16dp"
                android:gravity="center_horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_introduction"
                    android:textSize="20sp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/line_color"/>

            <LinearLayout
                android:id="@+id/ll_menu_intro"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/menu_intro"
                    android:textColor="@color/title_text"
                    />

                <View
                    style="@style/placeHolder"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/right_tip"
                    />

            </LinearLayout>

            <View
                style="@style/split_line"/>

            <LinearLayout
                android:id="@+id/ll_aggrement"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/agreement"
                    android:textColor="@color/title_text"
                    />

                <View
                    style="@style/placeHolder"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/right_tip"
                    />

            </LinearLayout>

            <View
                style="@style/split_line"/>

            <LinearLayout
                android:id="@+id/ll_update"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/check_version"
                    android:textColor="@color/title_text"
                    />

                <View
                    style="@style/placeHolder"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/right_tip"
                    />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>